# dxpars

./: .gitignore  README.md  pyproject.toml
dxpars/: document.py
dxpars/base/: base_objects.py
dxpars/docx_objects/: body.py  paragraph.py  table.py
dxpars/format/: paragraph.py  table.py
examples/: example.docx  example.py
tests/: test_document.py  test_paragraph.py  test_table.py
tests/fixtures/: test.docx
