[project]
name = "dxpars"
version = "1.0.0"
description = "python docx parser"
authors = [
    { name = "Stepan Martiugin", email = "stepanmartiugin@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.9"
dependencies = ["lxml ~=6.0.0"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/stmyst/dxpars"
"Bug Tracker" = "https://github.com/stmyst/dxpars/issues"